[package]
name = "observation-tools"
version = "0.0.13"
edition = "2021"
license = "Apache-2.0"
description = "Export, visualize, and inspect data from anywhere in your program"
readme = "../../../README.md"
homepage = "https://observation.tools"
repository = "https://github.com/Dig-Doug/observation-tools-client"
documentation = "https://docs.rs/observation-tools/"
include = [
    "**/*.rs",
    "Cargo.toml",
    "sign_in_redirect.html",
    "testdata/*",
]

[lib]
name = "observation_tools"
path = "lib.rs"
crate-type = ["cdylib", "lib"]

[dependencies]
anyhow = { workspace = true }
async-channel = { workspace = true }
async-trait = { workspace = true }
base64 = { workspace = true }
observation-tools-common = { path = "../../common" }
bs58 = { workspace = true }
cached = { workspace = true, features = ["async"] }
console_error_panic_hook = { workspace = true }
crossbeam-channel = { workspace = true }
custom_error = { workspace = true }
derive_builder = { workspace = true }
docify = { workspace = true }
env_logger = { workspace = true }
form_urlencoded = { workspace = true }
futures = { workspace = true }
image = { workspace = true }
instant = { workspace = true, features = ["wasm-bindgen"] }
itertools = { workspace = true }
js-sys = { workspace = true }
keyring = { workspace = true }
nalgebra = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
oauth2 = { workspace = true }
pin-project = { workspace = true }
protobuf = { workspace = true }
reqwest = { workspace = true, features = ["rustls-tls", "json", "multipart"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
sha2 = { workspace = true }
tempfile = { workspace = true, optional = true }
thiserror = { workspace = true }
tokio = { workspace = true, features = ["full"], optional = true }
tokio-util = { workspace = true, features = ["full"], optional = true }
tower = { workspace = true, features = ["limit", "util", "buffer"] }
tower-layer = { workspace = true }
tower-service = { workspace = true }
tracing = { workspace = true }
tracing-wasm = { workspace = true }
url = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
wasm-bindgen = { workspace = true, features = ["serde-serialize"] }
wasm-bindgen-derive = { workspace = true }
wasm-bindgen-futures = { workspace = true }
web-sys = { workspace = true, features = ["Window", "Performance", "PerformanceTiming"] }
whoami = { workspace = true }

[build-dependencies]
protobuf-codegen = { workspace = true }

[dev-dependencies]
tracing-subscriber = { workspace = true }

[features]
files = ["tempfile"]
rust = ["tokio", "tokio-util", "files", "reqwest/stream"]
wasm = []
default = ["rust"]

[package.metadata.docs.rs]
cargo-args = ["-Zunstable-options", "-Zrustdoc-scrape-examples"]
